--- a/latest/print.html
+++ b/latest/print.html
@@ -361,7 +361,8 @@ for fully working examples.</p>
 <h3 id="--template-group-group"><a class="header" href="#--template-group-group"><code>--template-group &lt;GROUP&gt;</code></a></h3>
 <p>Render specified <a href="00-intro/../01-templates/02-01-template-groups.html">Template Groups</a>.</p>
 <blockquote>
-<p><i class="fa fa-exclamation-circle"></i> Only exact matches are rendered.</p>
+<p><i class="fa fa-exclamation-circle"></i> Passing nonexistent
+<a href="00-intro/../01-templates/02-01-template-groups.html">Template Groups</a> will return an error.</p>
 </blockquote>
 <p>Multiple <a href="00-intro/../01-templates/02-01-template-groups.html">Template Groups</a> can be passed using the following
 syntax.</p>
